tests/NormalTests/paczka1/small_fuzzy/44001777.err
Error in line 10: gVjN35SqWu4 S388 32,8
